# advent-of-haskell

./: advent-of-haskell.cabal  default.nix
app/: Main.hs
nix/: sources.json
src/: AOC.hs  Solution.hs
src/AOC/: Solution.hs
src/AOC/Y2015/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs
src/AOC/Y2021/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  Heap.hs
test/: Main.hs
test/AOC/Y2015/D01/: Tests.hs
test/AOC/Y2015/D02/: Tests.hs
test/AOC/Y2015/D03/: Tests.hs
test/AOC/Y2015/D04/: Tests.hs
test/AOC/Y2015/D06/: Tests.hs
test/AOC/Y2021/D03/: Tests.hs
test/AOC/Y2021/D09/: Tests.hs
test/AOC/Y2021/D11/: Tests.hs
