cabal-version: 3.0
name:          advent-of-haskell
synopsis:      Advent of Code solutions in Haskell
version:       0.0.1.0
homepage:      https://github.com/mcwitt/advent-of-haskell
license:       BSD-3-Clause
author:        Matt Wittmann
maintainer:    Matt Wittmann
copyright:     Matt Wittmann
category:      Package.Category
build-type:    Simple

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  AOC
  ghc-options:      -Wall -fno-warn-name-shadowing
  build-depends:    base >=4.11 && <5

executable advent-of-haskell
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -O2
  build-depends:
    , advent-of-haskell
    , base

test-suite advent-of-haskell-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:
    , advent-of-haskell
    , base               >=4.11 && <5
    , hedgehog
